Fix align-items on project page

--- a/style/style.css
+++ b/style/style.css
@@ -127,7 +127,7 @@ footer {
 .project-page {
   max-width: 160rem;
   display: flex;
-  align-items: end;
+  align-items: start;
   flex-flow: column;
   margin: 2em 8em;
   padding-bottom: 6rem;
@@ -243,5 +243,5 @@ body {
     #projects .portfolio-preview .portfolio-preview-subtitle {
       color: #757575;
       font-size: 1rem;
-      line-height: 1.5;
+      line-height: 2;
       padding: 1rem .75rem; }
